# memaccess

./: LICENSE  README.md  appveyor.yml  setup.py
memaccess/: __init__.py
tests/: test_MemoryView.py
tests/native/: CMakeLists.txt  main.c
tests/native/read-test-app/: main.c
tests/native/write-test-app/: CMakeLists.txt  main.c
