cmake_minimum_required(VERSION 2.6)

get_filename_component(TESTNAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)

project(${TESTNAME} C)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})

add_executable(${PROJECT_NAME} main.c)
